--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate for Express RESTful API",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "mocha"
   },
   "repository": {
@@ -22,5 +23,21 @@
   "bugs": {
     "url": "https://github.com/shaneBen23/api-boilerplate/issues"
   },
-  "homepage": "https://github.com/shaneBen23/api-boilerplate#readme"
+  "homepage": "https://github.com/shaneBen23/api-boilerplate#readme",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-bearer-token": "^2.4.0",
+    "express-jwt": "^5.3.3",
+    "log4js": "^6.1.2",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.7",
+    "node-localstorage": "^2.1.5",
+    "password-hash": "^1.2.2",
+    "swagger-tools": "^0.10.4",
+    "swagger-ui-express": "^4.1.4"
+  }
 }
